# smartdisputeai1

./: .env.example  .gitignore  .replit  Dockerfile  Procfile  TestimonialCarousel.tsx  __init__.py  advanced-email-test.js  ai-fallback-test.html  ai-service-test.html  ai_document_analysis.cjs  ai_handler.py  analytics_documentation.md  anthropic_analyzer.py  app-simple.py  app.py  app_enhanced.py  app_payment.py  app_simple.py  canlii_scraper.py  check-claude-status.cjs  check_anthropic_config.js  claude-test.html  claude-test.js  create_basic_template.py  create_cas_answer_plan_template.py  create_cas_appeal_template.py  create_cas_cease_desist_template.py  create_cas_records_request_template.py  create_cas_worker_reassignment_template.py  create_landlord_cease_desist_template.py  create_landlord_tenant_template.py  create_sample_pdf.py  create_specific_templates.py  create_sublease_agreement_template.py  create_templates.py  create_tenant_notice_templates.py  dispute-letter-generator-README.md  dispute-letter-sender-README.md  dispute-letter-test.js  (+91 more)
attached_assets/: Pasted--1-Enhancing-AI-Document-Analysis-a-Implement-Advanced-Natural-Language-Processing-NLP-O-1744006415864.txt  Pasted--DOCTYPE-html-html-lang-en-head-Basic-Meta-Setup-meta-charset-UTF-8-meta-nam-1743592207815.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1744249104115.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-wi-1744258753144.txt  content-1743605651070.md  content-1744248957035.md  paypal_payment_page.html  (+36 more)
(+429 files in other folders)
