[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "docx>=0.2.4",
    "docxtpl>=0.19.1",
    "fitz>=0.0.1.dev2",
    "flask>=3.1.0",
    "fpdf>=1.7.2",
    "numpy>=2.2.4",
    "openai>=1.71.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pymupdf>=1.25.5",
    "pypandoc>=1.15",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "reportlab>=4.3.1",
    "stripe>=12.0.0",
    "werkzeug>=3.1.3",
]
